--- a/docs/guides/vtex-io/Storefront-Guides/testing-code-hike.mdx
+++ b/docs/guides/vtex-io/Storefront-Guides/testing-code-hike.mdx
@@ -23,15 +23,11 @@ Check if the [Builders](https://developers.vtex.com/docs/guides/vtex-io-document
 
 ## Step by step
 
-<CH.Scrollycoding>
-
 ### Step 1 - Defining your custom component
 
 For your block to accept user customizations, export the React component responsible for the block. This component should include a schema that allows editing directly in the Site Editor.
 
-Creating a new folder in the `/react` root directory
-
-	Follow the pattern `react/components/{ComponentName}/index.tsx`. For example, for a component named `CustomComponent`, the folder structure is as follows:
+1. Create a new folder in the `/react` root directory. Follow the pattern `react/components/{ComponentName}/index.tsx`. For example, for a component named `CustomComponent`, the folder structure is as follows:
 
 ```txt
 react
@@ -40,9 +36,11 @@ react
            ┣ index.tsx
 ```
 
----
+<CH.Scrollycoding>
 
-Open the `index.tsx` file and define your custom component. Let’s break down the code into parts:
+2. Open the `index.tsx` file and define your custom component. Let’s break down the code into parts:
+
+---
 
 **Interface definition:** The `CustomComponentProps` defines the type for the component’s props, specifying `title` and `subtitle` as the expected string props.
 
@@ -82,10 +80,8 @@ const CustomComponent = ({ title, subtitle }: CustomComponentProps) => {
 
 **Default props:** The `defaultProps` specifies the default values for the props of the `CustomComponent`. If the user does not define props in the Site Editor, the `defaultProps` values will be returned.
 
-
-<CH.Code show={[]}>
-	
-	```tsx
+<CH.Code show={["react/CustomComponent/index.tsx"]}>	
+```tsx
 CustomComponent.defaultProps = {
   title: "VTEX",
   subtitle: "The Composable and Complete Commerce Platform.",
@@ -98,9 +94,9 @@ CustomComponent.defaultProps = {
 
 **Schema definition:** The `schema` defines the structure and types of the props, allowing the component to be customized within the Site Editor.
 
-	<CH.Code show={[]}>
+<CH.Code show={["react/CustomComponent/index.tsx"]}>
 
-	```tsx
+```tsx
 CustomComponent.schema = {
   title: 'Custom Component',
   type: 'object',
@@ -123,7 +119,7 @@ CustomComponent.schema = {
 
 **Export the component:** Export the component, making it available. By setting `CustomComponent` as the default export, you can import it into other app parts.
 
-<CH.Code show={[]}>
+<CH.Code show={["react/CustomComponent/index.tsx"]}>
 
 ```tsx
 export default CustomComponent;
@@ -131,7 +127,7 @@ export default CustomComponent;
 
 </CH.Code>
 
-	</CH.Scrollycoding>
+</CH.Scrollycoding>
 
 >ℹ️ Ensure you define the `defaultProps` and `schema` objects for the component in [JSON Schema](https://json-schema.org/) format, a declarative language that provides a standardized way to describe and validate JSON data.
 
@@ -146,3 +142,53 @@ import CustomComponent from './components/CustomComponent';
 
 export default CustomComponent;
 ```
+
+### Step 3 - Referencing definitions within the `interfaces` file
+
+Now, you need to reference your custom component in the [`interfaces.json` file](https://developers.vtex.com/docs/guides/vtex-io-documentation-interface) within the `/store` folder. This file establishes the relationship between a block and a React component, allowing the [store builder](https://developers.vtex.com/docs/guides/vtex-io-documentation-store-builder) to build the store's frontend.
+
+Follow the steps below to declare your definitions in the `interfaces.json` file:
+
+1. In the app's repository where you are developing your custom component, open the `interfaces.json` file within the `/store` folder.
+
+   ```txt
+   store
+    ┣ 📄 interfaces.json
+   ```
+
+2. Declare the schema definitions for your component as follows:
+
+   ```json store/interfaces.json
+   {
+     "custom-component": {
+       "component": "CustomComponent",
+       }
+   }
+   ```
+
+>ℹ️ In the schema above, the block identifier is named `custom-component`. Choose a name that clearly describes the component it references.
+
+### Step 4 - Using the component within a store page
+
+To use the new component, declare it within the desired page template. For example, to use the `CustomComponent` on the store’s main page, the `custom-component` block must be declared within the `home` block:
+
+```json
+{
+   "store.home": {
+       "blocks": ["custom-component"]
+   }
+}
+```
+
+By [linking the app](https://developers.vtex.com/docs/guides/vtex-io-documentation-linking-an-app), your component will be available to visualize and test in the Site Editor within the corresponding [development workspace](https://developers.vtex.com/docs/guides/vtex-io-documentation-creating-a-development-workspace).
+
+### Step 5 - Making your component available in the live store’s Site Editor
+
+After configuring and testing your component, deploy the new version of your app to make it available in the live store’s Site Editor.
+
+Learn how to make it available in the [Deploying a new app version](https://developers.vtex.com/docs/guides/vtex-io-documentation-making-your-new-app-version-publicly-available) guide.
+
+When the process is finished, the component will appear as follows in the live account’s Site Editor:
+
+![custom-component](https://cdn.jsdelivr.net/gh/vtexdocs/dev-portal-content@testing-code-hike/ ) | ![schema-custom-component](https://cdn.jsdelivr.net/gh/vtexdocs/dev-portal-content@testing-code-hike/ )
+:--- | ---: 
