--- a/docs/faststore/docs/faststore-api/schema/query.mdx
+++ b/docs/faststore/docs/faststore-api/schema/query.mdx
@@ -20,7 +20,7 @@ Arguments preeceded by an exclamation mark (`!`) are not nullable.
 <tbody>
 <tr>
 <td colspan="2" valign="top"><strong>product</strong></td>
-<td valign="top"><a href="#storeproduct">StoreProduct</a>!</td>
+<td valign="top"><a href="https://developers.vtex.com/docs/guides/faststore/schema-objects#storeproduct">StoreProduct</a>!</td>
 <td>
 
 Returns the details of a product based on the specified locator.
@@ -29,7 +29,7 @@ Returns the details of a product based on the specified locator.
 </tr>
 <tr>
 <td colspan="2" align="right" valign="top">locator</td>
-<td valign="top">[<a href="#istoreselectedfacet">IStoreSelectedFacet</a>!]!</td>
+<td valign="top">[<a href="https://developers.vtex.com/docs/guides/faststore/schema-inputs#istoreselectedfacet">IStoreSelectedFacet</a>!]!</td>
 <td>
 
 An array of selected search facets.
@@ -226,7 +226,7 @@ Returns information about shipping simulation.
 <td valign="top">[<a href="#ishippingitem">IShippingItem</a>!]!</td>
 <td>
 
-List of SKU products
+Shipping Simulation item input.
 
 </td>
 </tr>
@@ -235,7 +235,7 @@ List of SKU products
 <td valign="top"><a href="#string">String</a>!</td>
 <td>
 
-Postal code to freight calculator
+Postal code to freight calculator.
 
 </td>
 </tr>
@@ -244,7 +244,7 @@ Postal code to freight calculator
 <td valign="top"><a href="#string">String</a>!</td>
 <td>
 
-Country of postal code
+Country of postal code.
 
 </td>
 </tr>
@@ -269,7 +269,7 @@ Returns a list of sellers available for a specific localization.
 <td valign="top"><a href="#string">String</a></td>
 <td>
 
-Postal code input to calculate sellers
+Postal code input to calculate sellers.
 
 </td>
 </tr>
@@ -278,7 +278,7 @@ Postal code input to calculate sellers
 <td valign="top"><a href="#igeocoordinates">IGeoCoordinates</a></td>
 <td>
 
-Geocoordinates input to calculate sellers
+Geocoordinates input to calculate sellers.
 
 </td>
 </tr>
@@ -287,7 +287,7 @@ Geocoordinates input to calculate sellers
 <td valign="top"><a href="#string">String</a>!</td>
 <td>
 
-Country of localization
+Country of localization.
 
 </td>
 </tr>
@@ -296,7 +296,7 @@ Country of localization
 <td valign="top"><a href="#string">String</a></td>
 <td>
 
-Sales channel of the navigation
+Sales channel of the navigation.
 
 </td>
 </tr>
