--- a/docs/faststore/docs/headless-cms/1-configuring-the-vtex-account.mdx
+++ b/docs/faststore/docs/headless-cms/1-configuring-the-vtex-account.mdx
@@ -70,16 +70,17 @@ Let's configure the URLs of the webhooks used by the Headless CMS app.
 1. In the VTEX Admin, access **Storefront > Headless CMS**. 
 2. In the FastStore project interface, click on `Settings` (⚙️).
 3. In **Settings**, click the `Build` tab.
-4. Fill the **Preview URL** field with your production URL. This URL activates the button on Headless CMS so you can preview the changes made on a page. _Replace the values between curly brackets according to your scenario._
+4. Fill the **Preview URL** field with your live store URL. This URL activates the button on Headless CMS so you can preview the changes made on a page. 
 
     ```sh
-    https://{account}.vtex.app/api/preview
+    https://{live-store-id}.vtex.app/api/preview
     ```
+  > Replace the values between curly brackets according to your [live store ID from WebOps](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#production-overview). You can find the live store ID in the VTEX Admin by accessing **Storefront > FastStore WebOps**. In the [**Production Overview**](https://developers.vtex.com/docs/guides/faststore/1-onboarding-dashboard#production-overview) card, locate the **Live Store** URL. The live store ID is a combination of the store account name and the live store ID number, for example: `mystore-clwjc7fw200ay9qau1smn8i4l-21vm59f3q.b`. For this example, the Preview URL is the following: `https://mystore-clwjc7fw200ay9qau1smn8i4l-21vm59f3q.b.vtex.app/api/preview`.
 
 8. Fill in the **Production base URL** field with your store's endpoint to preview changes in the Headless CMS before publishing them. _Replace the values between curly brackets according to your scenario._
 
     ```sh
-    https://{account}.vtex.com/
+    https://{live-store-id}.vtex.app
     ```
 
 9. Click on **SAVE**.
