--- a/docs/faststore/docs/getting-started/1-onboarding/overview.mdx
+++ b/docs/faststore/docs/getting-started/1-onboarding/overview.mdx
@@ -17,7 +17,7 @@ Please open a ticket with the [VTEX support team](https://help.vtex.com/support)
 
 Create a Catalog for populating and testing your store with features like product listing pages, search functionality, product detail pages, and checkout. Without a Catalog, testing would be incomplete, and developing without it can cause data integration issues, delays, and extra retrofitting effort.
 
-For more information on how to create a Catlog, refer to the [Catalog documentation](https://help.vtex.com/en/tracks/catalog-101--5AF0XfnjfWeopIFBgs3LIQ/3rA2tTpIoEXdv2nzC27zxR).
+For more information on how to create a Catalog, refer to the [Catalog documentation](https://help.vtex.com/en/tracks/catalog-101--5AF0XfnjfWeopIFBgs3LIQ/3rA2tTpIoEXdv2nzC27zxR).
 
 ### Have a GitHub account 
 
