--- a/docs/faststore/components/features/regionalization.mdx
+++ b/docs/faststore/components/features/regionalization.mdx
@@ -3,13 +3,11 @@ title: "Regionalization"
 excerpt: "This feature enables customers to set a location using a valid Postal Code."
 ---
 
-## Overview
-
-Regionalization is a feature of [VTEX Intelligent Search](https://help.vtex.com/en/tracks/vtex-intelligent-search--19wrbB7nEQcmwzDPl1l4Cb/3qgT47zY08biLP3d5os3DG) that allows for the optimization of search results according to the availability of sellers in the customer's region.
+Regionalization is a feature of [VTEX Intelligent Search](https://help.vtex.com/en/tracks/vtex-intelligent-search--19wrbB7nEQcmwzDPl1l4Cb/3qgT47zY08biLP3d5os3DG) that optimizes search results according to the availability of sellers in the customer's region.
 
 Regionalization uses a behavior from VTEX Intelligent Search called [Availability](https://help.vtex.com/en/tracks/vtex-intelligent-search--19wrbB7nEQcmwzDPl1l4Cb/7LMQbWK5nElIkXo0NK8Kux). It searches for products available in the inventory of sellers that serve a particular region.
 
-Stores that have more than one registered white label seller usually have specific inventories for each region. This is the case for supermarkets, for example.
+Stores that have more than one registered white-label seller usually have specific inventories for each region. This is the case for supermarkets, for example.
 
 With the Regionalization feature enabled, if a customer enters their Postal Code while browsing the store (before checkout), only products available in the corresponding region will be displayed in the search results.
 
@@ -17,9 +15,9 @@ With the Regionalization feature enabled, if a customer enters their Postal Code
 
 ## Usage
 
-1. Intentionally, a user Sets its location using a Postal Code
-2. Updates Product Catalog
-3. Gets notified if there's product conflict at minicart
+1. Intentionally, a user sets its location using a postal code.
+2. Updates product catalog.
+3. Gets notified if there's a product conflict at Minicart.
 
 ---
 
@@ -40,7 +38,7 @@ With the Regionalization feature enabled, if a customer enters their Postal Code
   </SectionItem>
   <SectionItem
     title="Region Modal"
-    description="It's a modal with some region configurations."
+    description="A modal with region configurations."
     actionPath="/docs/guides/faststore/organisms-region-modal"
   >
     <UIProvider>
