--- a/docs/faststore/docs/reference/global-tokens/overview.mdx
+++ b/docs/faststore/docs/reference/global-tokens/overview.mdx
@@ -1,14 +1,14 @@
 ---
-title: ' Global Tokens'
+title: 'Global Tokens'
 ---
 
-**Design tokens** are parameters that affect all UI look 'n' feel and they are the **main configuration** file of a Theme. Component-specific tokens often inherit from global tokens but are named specifically to apply those tokens in component development.
+Design Tokens are parameters that affect all UI look 'n' feel, and they are the main configuration file of a Theme. Component-specific tokens often inherit from global tokens but are named specifically to apply those tokens in component development.
 
 ## Global Tokens
 
-FastStore uses a default theme called `Brandless`, which provides structural styles for your components and pages. Please read [Brandless's page](https://developers.vtex.com/docs/guides/faststore/using-themes-overview#brandless-and-the-theming-structure) to further information about the themeable architecture.
+FastStore uses a default theme called `Brandless`, which provides structural styles for your components and pages. Please read [Brandless's page](https://developers.vtex.com/docs/guides/faststore/using-themes-overview#brandless-and-the-theming-structure) for further information about the themeable architecture.
 
-Its presets are defined on `src/base/tokens.scss` in [@faststore/ui](https://github.com/vtex/faststore/blob/main/packages/ui/src/styles/base/tokens.scss) and it's separated in these main areas:
+Its presets are defined on `src/base/tokens.scss` in [@faststore/ui](https://github.com/vtex/faststore/blob/main/packages/ui/src/styles/base/tokens.scss), and it's separated in these main areas:
 
 <SectionList grid="column" classes="faststore-tokensLinks">
   <SectionItem
